--- a/tex/appendix_results7tev_table.tex
+++ b/tex/appendix_results7tev_table.tex
@@ -5,22 +5,24 @@
  &\multicolumn{5}{c}{$\mtt{}$ ~[GeV]} \\
 Source of systematic uncertainty           &         $0$--$420$ & $420$--$500$      & $500$--$600$         & $600$--$750$      &   $>750$ \\
 \midrule
-Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$  \\
+Lepton reconstruction/identification              & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$  \\
 Lepton energy scale and resolution                & 0.017 & 0.014 & 0.013 & 0.007 & $<0.005$ \\
 Jet energy scale and resolution                   & 0.014 & 0.007 & 0.035 & 0.032 & 0.017 \\
-Missing transverse momentum and pile--up modeling & 0.013 & 0.017 & 0.018 & 0.008 & 0.005 \\
-Multi--jets background normalization    & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-PDF                                     & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Missing transverse momentum & 0.013 & 0.017 & 0.018 & 0.008 & 0.005 \\
+Multijet background normalization    & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Signal modeling                        & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+Parton shower/hadronization             & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+MC statistics                 & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+PDF                                     & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
+$W$+jets normalization        & $<0.005$ & $<0.004$ & $<0.005$ & $<0.005$ & $<0.005$ \\
 \midrule
-Statistical uncertainty                    & 0.054             &        0.042      &        0.046      &       0.052       &         0.054     \\
+Statistical uncertainty                    & 0.05 &        0.04 &        0.05  &       0.05   &   0.05    \\
 \bottomrule
 \end{tabular}
-\caption{}
+\caption{Impact of individual sources of uncertainty on
+  \ac{} measured as a function of \mtt{} at \seventev{}. Variations below 10\%
+  of the statistical uncertainty are considered negligible.}
 \label{table:Systematics_mtt}
 \end{table}
 
@@ -30,22 +32,24 @@ Statistical uncertainty                    & 0.054             &        0.042   
  &\multicolumn{3}{c}{$\pttt{}$ ~[GeV]} \\
 Source of systematic uncertainty           &    $0$--$25$           &        $25$--$60$         &  $>60$    \\
 \midrule
-Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ \\
+Lepton reconstruction/identification              & $<0.005$ & $<0.006$ & $<0.003$ \\
 Lepton energy scale and resolution                & 0.011 & 0.013 & 0.006   \\
 Jet energy scale and resolution                   & 0.009 & 0.020 & 0.020   \\
-Missing transverse momentum and pile--up modeling & 0.017 & 0.010 & $<0.005$ \\
-Multi--jets background normalization    & $<0.005$ & $<0.005$ & $<0.005$  \\
-$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$  \\
-Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$  \\
-Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$  \\
-Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$  \\
-PDF                                     & $<0.005$ & $<0.005$ & $<0.005$  \\
-$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$  \\
+Missing transverse momentum & 0.017 & 0.010 & $<0.003$ \\
+Multijet background normalization    & $<0.005$ & $<0.006$ & $<0.003$  \\
+$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.006$ & $<0.003$  \\
+Signal modeling                        & $<0.005$ & $<0.006$ & $<0.003$  \\
+Parton shower/hadronization             & $<0.005$ & $<0.006$ & $<0.003$  \\
+MC statistics                 & $<0.005$ & $<0.006$ & $<0.003$  \\
+PDF                                     & $<0.005$ & $<0.006$ & $<0.003$  \\
+$W$+jets normalization        & $<0.005$ & $<0.006$ & $<0.003$  \\
 \midrule
-Statistical uncertainty                 & 0.052                &        0.057      &        0.034     \\
+Statistical uncertainty                 & 0.05   &        0.06      &        0.034     \\
 \bottomrule
 \end{tabular}
-\caption{}
+\caption{Impact of individual sources of uncertainty on
+  \ac{} measured as a function of \pttt{} at \seventev{}. Variations below 10\%
+  of the statistical uncertainty are considered negligible.}
 \label{table:Systematics_pttt}
 \end{table}
 
@@ -55,22 +59,24 @@ Statistical uncertainty                 & 0.052                &        0.057   
  & \multicolumn{3}{c}{$|\ytt{}|$}    \\
 Source of systematic uncertainty           &    $0$--$0.3$          &        $0.3$--$0.7$     &  $>0.7$   \\
 \midrule
-Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ \\
+Lepton reconstruction/identification              & $<0.004$ & $<0.003$ & $<0.003$ \\
 Lepton energy scale and resolution                & 0.022 & 0.014 & 0.008   \\
-Jet energy scale and resolution                   & 0.013 & 0.007 & $<0.005$   \\
-Missing transverse momentum and pile--up modeling & $<0.005$ & 0.006 & $<0.005$ \\
-Multi--jets background normalization    & $<0.005$ & $<0.005$ & $<0.005$  \\
-$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$  \\
-Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$  \\
-Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$  \\
-Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$  \\
-PDF                                     & $<0.005$ & $<0.005$ & $<0.005$  \\
-$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$  \\
+Jet energy scale and resolution                   & 0.013 & 0.007 & $<0.003$   \\
+Missing transverse momentum & $<0.004$ & 0.006 & $<0.003$ \\
+Multijet background normalization    & $<0.004$ & $<0.003$ & $<0.003$  \\
+$b$--tagging/mis--tag efficiency                & $<0.004$ & $<0.003$ & $<0.003$  \\
+Signal modeling                        & $<0.004$ & $<0.003$ & $<0.003$  \\
+Parton shower/hadronization             & $<0.004$ & $<0.003$ & $<0.003$  \\
+MC statistics                 & $<0.004$ & $<0.003$ & $<0.003$  \\
+PDF                                     & $<0.004$ & $<0.003$ & $<0.003$  \\
+$W$+jets normalization        & $<0.004$ & $<0.003$ & $<0.003$  \\
 \midrule
-Statistical uncertainty                 & 0.042                &        0.030      &        0.025     \\
+Statistical uncertainty                 & 0.04       &        0.030      &        0.025     \\
 \bottomrule
 \end{tabular}
-\caption{}
+\caption{Impact of individual sources of uncertainty on
+  \ac{} measured as a function of |\ytt{}| at \seventev{}. Variations below 10\%
+  of the statistical uncertainty are considered negligible.}
 \label{table:Systematics_ytt}
 \end{table}
 
@@ -80,25 +86,27 @@ Statistical uncertainty                 & 0.042                &        0.030   
  &\multicolumn{5}{c}{$\mtt{}$ ~[GeV] for $\beta_{z,\ttbar} > 0.6$}    \\
 Source of systematic uncertainty           &         $0$--$420$ & $420$--$500$      & $500$--$600$         & $600$--$750$      &   $>750$ \\
 \midrule
-Lepton reconstruction/identification              & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$  \\
+Lepton reconstruction/identification              & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$  \\
 Lepton energy scale and resolution                & 0.021 & 0.033 & 0.039 & 0.024 & 0.015 \\
 Jet energy scale and resolution                   & 0.014 & 0.026 & 0.061 & 0.095 & 0.111 \\
-Missing transverse momentum and pile--up modeling & 0.019 & 0.030 & 0.032 & 0.019 & 0.011 \\
-Multi--jets background normalization    & 0.007 & $<0.005$ & $<0.005$ & $<0.005$ & 0.017 \\
-$b$--tagging/mis--tag efficiency                & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Signal modeling                        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Parton shower/hadronization             & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-Monte Carlo sample size                 & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-PDF                                     & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ \\
-$W$+jets normalization and shape        & $<0.005$ & $<0.005$ & $<0.005$ & $<0.005$ & 0.010 \\
+Missing transverse momentum & 0.019 & 0.030 & 0.032 & 0.019 & $<0.013$ \\
+Multijet background normalization    & 0.007 & $<0.007$ & $<0.007$ & $<0.010$ & 0.017 \\
+$b$--tagging/mis--tag efficiency                & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
+Signal modeling                        & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
+Parton shower/hadronization             & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
+MC statistics                 & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
+PDF                                     & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
+$W$+jets normalization        & $<0.008$ & $<0.007$ & $<0.007$ & $<0.010$ & $<0.013$ \\
 \midrule
-Statistical uncertainty                    & 0.078             &        0.070      &        0.074      &       0.098       &         0.131     \\
+Statistical uncertainty       & 0.08             &        0.07      &        0.07      &       0.10       &         0.13     \\
 \bottomrule
 \end{tabular}
-\caption{}
+\caption{Impact of individual sources of uncertainty on
+  \ac{} measured as a function of \mtt{} at \seventev{}, with the additional
+  requirement $\betatt{}>0.6$. Variations below 10\%
+  of the statistical uncertainty are considered negligible.}
 \label{table:Systematics_mtt_beta}
 \end{table}
-
 
 \begin{table}[!htp]\centering
 \begin{tabular}{l c c c }
@@ -111,7 +119,8 @@ Statistical uncertainty                    & 0.078             &        0.070   
   $>60$           &           &             &   $1$     \\
   \bottomrule
 \end{tabular}
-\caption{ }
+\caption{Correlation coefficients for the \ac{} values measured as a
+  function of \pttt{} at \seventev{}.}
 \label{tab:corr_pttt}
 \end{table}
 
@@ -126,7 +135,8 @@ Statistical uncertainty                    & 0.078             &        0.070   
   $>0.7$        &         &            &   $1$      \\
   \bottomrule
 \end{tabular}
-\caption{ }
+\caption{Correlation coefficients for the \ac{} values measured as a
+  function of |\ytt{}| at \seventev{}.}
 \label{tab:corr_ytt}
 \end{table}
 
@@ -143,6 +153,38 @@ Statistical uncertainty                    & 0.078             &        0.070   
   $>750$          &     &         &         &         & $1$     \\
   \bottomrule
 \end{tabular}
-\caption{ }
+\caption{Correlation coefficients for the \ac{} values measured as a
+  function of \mtt{} at \seventev{}, with the additional requirement $\betatt{}>0.6$.}
 \label{tab:corr_mtt_beta}
+\end{table}
+
+\begin{table}[!htbp]\centering
+\begin{tabular}{l c c c c c c}
+\toprule
+ &\multicolumn{6}{c}{$\mtt{}$ ~[GeV]} \\
+Source of systematic uncertainty&$0$--$420$&$420$--$500$&$500$--$600$&$600$--$750$&$750$--$900$&$>900$ \\
+\midrule
+Lepton reconstruction/identification & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004\\
+Lepton energy scale and resolution & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004 \\
+Jet reconstruction efficiency & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
+Jet energy scale and resolution & 0.009 & 0.006 & 0.006 & 0.005 & 0.014 & 0.012 \\
+Missing transverse momentum & 0.004 & <0.002 & <0.002 & <0.002 & 0.005 & <0.004  \\
+Multijet background normalization & 0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
+Other backgrounds normalization & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
+$b$--tagging/mis--tag efficiencies & <0.003 & <0.002 & <0.002 & <0.002 & <0.005 & <0.004  \\
+Signal modeling & 0.024 & <0.002 & 0.004 & 0.009 & 0.008  & 0.079 \\
+Parton shower/hadronization & 0.003 & 0.004 & <0.002 & 0.01 & 0.022 &0.005 \\
+MC statistics & 0.005 & 0.003 & 0.004 & 0.004 & 0.008 & 0.007\\
+PDF & 0.015 &0.004 & 0.006 & 0.007 & 0.015 & 0.014\\
+Unfolding response & <0.003  & <0.002 & <0.002  & <0.002 & <0.005  & 0.004\\
+\midrule
+Statistical uncertainty & 0.025 & 0.017 & 0.020 & 0.024 & 0.05 & 0.04\\
+\midrule
+Total uncertainty  & 0.04 & 0.018 & 0.022 & 0.029 & 0.06 & 0.09\\
+\bottomrule
+\end{tabular}
+\caption{Expected impact of individual sources of uncertainty on 
+  \ac{} measured as a function of \mtt{} at \seventev{}. Variations below 10\%
+  of the statistical uncertainty are considered negligible.}
+\label{table:Systematics_mtt8tev}
 \end{table}
