--- a/tex/appendix_results.tex
+++ b/tex/appendix_results.tex
@@ -1,1 +1,13 @@
+In this section additional details of the differential measurements
+are
+presented. Tables~\ref{table:Systematics_mtt}--\ref{table:Systematics_mtt_beta}
+summarize the impact of individual sources of uncertainty in each
+differential bin of the measurements at
+\seventev{}. Tables~\ref{tab:corr_pttt}--\ref{tab:corr_mtt_beta} shows
+the correlation coefficients for the differential measurements at
+\seventev{} as a function of \pttt{}, |\ytt{}| and \mtt{} with the
+additional $\betatt>0.6$. Finally, Table~\ref{table:Systematics_mtt8tev} shows
+the expected impact of individual sources of uncertainty in each
+\mtt{} bin of the measurement at \eighttev{}.
+
 \input{tex/appendix_results7tev_table.tex}
