--- a/bib/experiment.bib
+++ b/bib/experiment.bib
@@ -71,3 +71,34 @@
       reportNumber   = "CERN-PH-EP-2011-078",
       SLACcitation   = "%%CITATION = ARXIV:1110.1530;%%",
 }
+
+@article{2012gk,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Observation of a new particle in the search for the
+                        Standard Model Higgs boson with the ATLAS detector at the
+                        LHC}",
+      journal        = "Phys.Lett.",
+      volume         = "B716",
+      pages          = "1-29",
+      doi            = "10.1016/j.physletb.2012.08.020",
+      year           = "2012",
+      eprint         = "1207.7214",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-PH-EP-2012-218",
+      SLACcitation   = "%%CITATION = ARXIV:1207.7214;%%",
+}
+
+@article{Chatrchyan201230,
+title = "Observation of a new boson at a mass of 125 GeV with the CMS experiment at the LHC",
+journal = "Physics Letters B ",
+volume = "716",
+number = "1",
+pages = "30 - 61",
+year = "2012",
+note = "",
+issn = "0370-2693",
+doi = "http://dx.doi.org/10.1016/j.physletb.2012.08.021",
+url = "http://www.sciencedirect.com/science/article/pii/S0370269312008581",
+author = "{CMS Collaboration}",
+}
