--- a/tex/experiment.tex
+++ b/tex/experiment.tex
@@ -1,22 +1,34 @@
-\chapter{The ATLAS experiment at the LHC}
+\chapter{The ATLAS Experiment at the LHC}
 \label{sec:experiment}
 
-The ATLAS detector is one of the two general-purpose experiments at
-the Large Hadron Collider (LHC), CERN, Switzerland.
-It has been built to pursue a broad particle physics program. 
+The Large Hadron Collider is the world's highest energy particle
+accelerator, overcoming the Tevatron proton-antiproton collider. The
+ATLAS experiment is one of the two multi-purpose experiments that take
+advantage of the collisions provided by the Large Hadron Collider, and
+has been conceived to pursuit a broad and challenging physics program
+including the discovery of the Higgs boson, achieved in
+2012~\cite{2012gk,Chatrchyan201230}.
 
-The LHC is described in Sec.~\ref{sec:LHC}, while the design and
-operation of the ATLAS detector are discussed in
-Sec.~\ref{sec:ATLAS}.
+In this chapter we will briefly describe the main features of 
+the accelerator (Section~\ref{sec:LHC}) and in greater detail 
+the ATLAS detector (Section~\ref{sec:ATLAS}), both located at the CERN
+laboratory in Geneva, Switzerland.
 
 \section{The Large Hadron Collider}
 \label{sec:LHC}
 
-The Large Hadron Collider (LHC)~\cite{LHCreport} is a circular
-proton-proton ($pp$) collider. 
-It consists of a 27~km ring of superconducting magnets and
-accelerating cavities, where two beams of protons circulate in
-opposite directions. 
+The LHC program ~\cite{LHCreport} was approved by CERN Council in
+1994, followed by the approval of the four main experiments:
+ATLAS~\ref{sec:ATLAS} and CMS~\cite{cms} in 1996; ALICE~\cite{alice}
+in 1997; LHCb~\cite{lhcb} in 1998. Works towards the installation of
+the most powerful particle accelerator of the world started when the
+Large Electron Positron Collider (LEP) was dismantled in 2000 to give
+up its place in the tunnel to the LHC, which was then fully
+operational by 2008.
+
+The LHC is a circular proton--proton ($pp$) collider consisting of a
+27~km ring of superconducting magnets and accelerating cavities, where
+two beams of protons circulate in opposite directions. 
 The magnets bend and focus the proton beams into a circular trajectory
 while radio-frequency cavities boost their energy.
 The beams undergo several acceleration steps in the pre-accelerators
@@ -39,14 +51,50 @@ Finally the protons are injected into the LHC.
 \end{center}
 \end{figure}
 
+An important parameter of the LHC is the {\it
+  instantaneous luminosity}  $\mathcal L$, defined as
+\begin{equation}\label{eq:lumiN}
+\mathcal{L}=f\times n\dfrac{N_1\times N_2}{A},
+\end{equation} 
+$f$ is the frequency of collisions, $n$ the number of bunches, $N_1,
+N_2$ the number of particles in the two bunches, and $A$ beam
+cross-section.
+The \textit{integrated luminosity} over a period of time relates the
+total number of produced events $N_{tot}$ to the cross section:
+\begin{equation}\label{eq:intLumi}
+\int \mathcal L dt  = \dfrac{N_{tot}}{\sigma}.
+\end{equation}
+Therefore, the integrated luminosity is used to describe the amount of
+collision data delivered by the LHC.
+
+First proton beams were circulated on September 10, 2008, with the
+plan to have the first collisions at a center-of-mass energy
+$\sqrt{s}=900~\GeV{}$. However, nine days later, a faulty electrical
+connection between two superconducting magnets, caused the rupture of
+the cooling layer and the release of liquid Helium in the insulating
+vacuum. The subsequent explosion severely damaged the machine.
+After one year of repairs and consolidation, LHC resumed its
+operations and finally delivered the first $pp$ collisions on November
+30, 2009.
+In 2010 each beam was accelerated to an energy of \mbox{$3.5 \TeV$}, 
+resulting into a center-of-mass energy \mbox{$\sqrt{s} = 7 \TeV$}, and
+an integrated luminosity of $45\ifb$ was delivered.
+In 2011 the LHC delivered about $5.32\ifb{}$ of $pp$ collision data at \seventev{}.
+In 2012, the beam energy was increased to \mbox{$4 \TeV$}, 
+corresponding to \mbox{$\sqrt{s} = 8 \TeV$}. An integrated luminosity
+of $23.26\ifb{}$ was delivered.
+The LHC was designed to collide protons up to \mbox{$\sqrt{s} = 14
+  \TeV$}. In 2015 the LHC operation will resume with proton collisions
+at \mbox{$\sqrt{s} = 13 \TeV$}. 
+
 In the LHC the protons are bunched together into up to 2808 bunches 
 with a minimum spacing of \mbox{$25 \ns$}. 
 Each bunch consists of about $10^{11}$ particles. 
 These parameters will allow in the future to reach 
-the design peak luminosity of \mbox{$10^{34}~\mathrm{cm^{-2}~s^{-1}}$}.
+the design peak luminosity of \mbox{$10^{34}~\mathrm{cm^{-2}s^{-1}}$}.
 However, most of the data collected so far were taken with a bunch 
 spacing of \mbox{$50 \ns$} and up to 1308 bunches, yielding a maximum
-peak luminosity of \mbox{$3.65\cdot{}10^{33}~\mathrm{cm^{-2}~s^{-1}}$}.
+peak luminosity of \mbox{$3.65\cdot{}10^{33}~\mathrm{cm^{-2}s^{-1}}$}.
 As shown in Fig.~\ref{fig:lumivstime}, the peak luminosity has increased
 steadily during the data--taking.
 
@@ -54,7 +102,7 @@ steadily during the data--taking.
 \includegraphics[width=0.8\textwidth]{figures/experiment/lumivstime}
 \caption{
 The peak instantaneous luminosity delivered to ATLAS per day versus
-time during the p-p runs of 2010,2011 and 2012.}
+time during the $pp$ runs of 2010, 2011 and 2012.}
 \label{fig:lumivstime}
 \end{figure}
 
@@ -79,18 +127,8 @@ per crossing for the 2011 and 2012 data.}
 \label{fig:mu}
 \end{figure}
 
-In 2011 each beam was accelerated to an energy of \mbox{$3.5 \TeV$}, 
-resulting into a center-of-mass energy \mbox{$\sqrt{s} = 7 \TeV$}, and
-an integrated luminosity of $5.32\ifb{}$ was delivered.
-In 2012, the beam energy was increased to \mbox{$4 \TeV$}, 
-corresponding to \mbox{$\sqrt{s} = 8 \TeV$}. An integrated luminosity
-of $23.26\ifb{}$ was delivered.
-The LHC was designed to collide protons up to \mbox{$\sqrt{s} = 14
-  \TeV$}. In 2015 the LHC operation will resume with proton collisions
-at \mbox{$\sqrt{s} = 13 \TeV$}. 
-
 The beams are brought to collision in four interaction points along
-the ring, where four experiments are situated: 
+the ring, where the four main experiments are situated: 
 ATLAS, described in Sec.~\ref{sec:ATLAS} and CMS~\cite{cms} are
 multipurpose experiments designed to study a broad range of physics
 processes; the LHCb~\cite{lhcb} experiment is specialized in the
@@ -121,10 +159,12 @@ properties for different types of particles. The sub-detectors are
 grouped into three main systems: 
 
 \begin{itemize}
-\item The Inner Detector, described in Sec.~\ref{sec:ID}, immersed in
+\item The Inner Detector, immersed in
   a solenoidal magnetic field, constitutes a tracking system used to
   identify and measure the momenta of charged particles and to
-  identify the interaction vertices and the displaced vertices. 
+  identify the interaction vertices and the displaced
+  vertices. Sec.~\ref{sec:ID} illustrates the design and operation of
+  the inner detector.
 \item The Calorimeters are used to identify and measure the energy of
   neutral and charged particles. They are designed to stop most types
   of particles, except for muons and
@@ -142,7 +182,7 @@ In \ttbar{} events with $\ell{}$+jets final state, electrons and jets
 are identified by the tracking and calorimetry systems, muons are
 identified by the tracking and muon systems, and the transverse
 components of the neutrino momenta are inferred from the imbalance in
-the total momenta measured in the detector.
+the total transverse momenta measured in the detector.
 
 \subsection{Coordinate system}
 \label{sec:coords}
@@ -154,11 +194,20 @@ and the $z$ axis is along the beam direction. The azimuthal angle
 $\phi$ is the angle with respect to the positive $x$ axis in the
 $x$--$y$ plane, transverse to the beam direction. The polar angle
 $\theta$ is defined as the angle with the positive $z$ axis. Its
-function pseudo-rapidity $\eta = -ln[tan(\dfrac{\theta}{2})]$ is more often
-used. For massless objects, this quantity is equivalent to the
-rapidity as $y = \dfrac{1}{2}ln[\dfrac{E+p_z}{E-p_z}]$. The distance in
-the $\eta$--$\phi$ space is referred to as $\Delta R = \sqrt{(\Delta
-  \eta)^2+(\Delta \phi)^2}$.
+function pseudo-rapidity \mbox{$\eta
+  =-\ln\left(\tan\dfrac{\theta}{2}\right)$} is more often used. For
+massless objects, this quantity is equivalent to the rapidity as
+\mbox{$y =\dfrac{1}{2}\ln\left(\dfrac{E+p_z}{E-p_z}\right)$}. The
+distance in the $\eta$--$\phi$ space is referred to as \mbox{$\Delta R
+  = \sqrt{(\Delta \eta)^2+(\Delta \phi)^2}$}.
+
+Since the detector is hermetic in the transverse plane, it is useful
+to define the transverse component of variables of interest,  
+like energy and momentum, as their projection on the XY plane, thus
+boost-invariant along the Z axis:
+\begin{equation}\label{eq:transv}
+\et = E\sin\theta, \qquad \pt = p\sin\theta.
+	\end{equation}
 
 \subsection{Inner detectors}
 \label{sec:ID}
@@ -195,10 +244,10 @@ tracks to the vertices with precision below \mbox{$100 \mum$}.
 Such precision is crucial for the identification of displaced
 secondary vertices.
 
-The SCT consists of a four layers barrel and two end-caps, each with
-nine disks. It covers the range \mbox{$|\eta| < 2.5$}.
-In the barrel, silicon strips are arranged parallel to the beam line,
-while in the disks, the strips are oriented radially.
+The SCT consists of a barrel with four layers of silicon micro--strip
+detectors and two end-caps, each with nine disks. It covers the range
+\mbox{$|\eta| < 2.5$}. In the barrel, silicon strips are arranged
+parallel to the beam line, while in the disks, the strips are oriented radially.
 Modules are arranged back-to-back with a small stereo angle of
 \mbox{$40 \mrad$} to allow for a measurement of the azimuth angle in
 each layer. A typical track yields three space-points in the Pixel
@@ -209,15 +258,17 @@ and secondary vertices.
 The TRT enhances the momentum resolution by providing additional track
 measurement points.
 The barrel is made of 73 planes of straw tubes filled with a gas
-mixture of 70\% Xenon, 27\% Carbon Dyoxide, 3\% Oxygen. The tubes are
-arranged parallel to the beam axis.
+mixture of 70\% Xenon, 27\% Carbon Dyoxide and 3\% Oxygen. The tubes
+are arranged parallel to the beam axis.
 In the end-cap, there are 160 straw planes, oriented radially,
 covering a range of \mbox{$|\eta| < 2.0$}. 
-The TRT also provides stand-alone electron/pion separation, based on
-the amount of transition radiation, much larger for electrons.
+The TRT also provides stand-alone electron/pion separation based on
+the amount of transition radiation, which is much larger for electrons
+than for pions.
 
 In order to limit the degradation of the energy measurement in the
-calorimeters, the ID is designed to absorb a minimum amount of energy.
+calorimeters, the ID is designed to minimize the amount of material in
+front of the calorimeters to avoid degrading the energy measurement.
 The total amount of material of the ID corresponds to roughly 0.5
 electromagnetic radiation lengths\footnote{The radiation length is
   defined as the typical amount of material traversed by an electron
@@ -228,17 +279,29 @@ In the regions \mbox{$0.6 < |\eta| < 1.37$} and \mbox{$1.52 < |\eta| <
 In the barrel-to-end-cap transition regions at \mbox{$1.37 < |\eta| <
   1.52$}, the amount of material is even larger, with a significant
 degradation of the energy measurement.
-Therefore, electrons in the transition regions were not taken into
-account in this analysis.
 
 \subsection{Calorimeters}
 \label{sec:calorimeter}
 
-Figure~\ref{fig:calorimeters} shows an overview of the different electromagnetic 
-and hadronic calorimeters of the ATLAS detector.
-Both calorimeters are sampling calorimeters consisting of alternating layers
-of dense absorber material and active material.
-Only the active material is used for the energy measurement.
+After crossing the ID and the solenoid magnet, particles enter the
+calorimeters system.
+The full system is characterized by a coverage in pseudorapidity up to
+$|\eta|<5$ and an almost full coverage in $\phi$. With  a thickness of
+22~$X_0$ and 24~$X_0$ in the barrel and end-cap regions, respectively, 
+it is designed to stop most of the particles produced at collisions,
+except muons and neutrinos.
+Besides the measurement of particle energy, the calorimeters also
+provide particle identification information, useful for discrimination
+of electrons, photons and jets, and allows the determination
+of the missing transverse energy.
+
+Figure~\ref{fig:calorimeters} shows an overview of the different
+electromagnetic  and hadronic calorimeters of the ATLAS detector.
+Both calorimeters are sampling calorimeters consisting of alternating
+layers of dense absorber material and active material.
+The absorber is a a dense medium with the purpose of stopping
+particles and start showers, while the active material is used for the
+energy measurement.
 
 The hadronic calorimeter in the barrel~(Tile) uses steel as absorber
 and scintillators as active material.
@@ -246,10 +309,10 @@ The electromagnetic and the forward hadronic calorimeters use Liquid
 Argon~(LAr) technology with different types of absorbers:
 lead in the ElectroMagnetic Barrel~(EMB) and the ElectroMagnetic
 End-cap Calorimeter (EMEC), copper in the Hadronic End-cap
-Calorimeter~(HEC) and the electromagnetic part of the Forward Calorimeter~(FCal),
-and tungsten in the hadronic part of the FCal.
-The LAr calorimeters are placed in three cryostats: one for the barrel and one for each end-cap.
-
+Calorimeter~(HEC) and the electromagnetic part of the Forward
+Calorimeter~(FCal), and tungsten in the hadronic part of the FCal.
+The LAr calorimeters are placed in three cryostats: one for the barrel
+and one for each end-cap.
 \begin{figure}[ht]
 \begin{center}
 \includegraphics[width=0.9\textwidth]{figures/experiment/calorimeters}
@@ -259,7 +322,6 @@ The LAr calorimeters are placed in three cryostats: one for the barrel and one f
 \label{fig:calorimeters}
 \end{center}
 \end{figure}
-
 The materials have been chosen to provide fast readout, 
 radiation hardness, and high containment of electromagnetic and
 hadronic showers\footnote{A shower is a cascade of secondary particles produced 
@@ -276,7 +338,6 @@ layers, where the first layer granularity is
 $\Delta\eta\times\Delta\phi=0.0031\times0.098$. 
 To ensure continuous coverage in azimuth and to enable fast readout, 
 the lead absorbers are folded into an accordion-shaped structure.
-
 A similar design as for the EMB has been used for the EMEC, 
 which is divided into two wheels covering the ranges \mbox{$1.375 < |\eta| < 2.5$}
 and \mbox{$2.5 < |\eta| < 3.2$}.
@@ -284,13 +345,14 @@ The inner wheel has a coarser granularity in $\eta$ and $\phi$,
 limiting the region devoted to precision physics to \mbox{$|\eta| < 2.5$}.
 A thin LAr layer (pre-sampler) is placed in front of the EMB and the
 EMEC at \mbox{$|\eta| < 1.8$} to correct for energy lost in front of the calorimeter.
-
-The Tile calorimeter is located behind the EMB and the EMEC and is divided into three longitudinal layers.
-It consists of a central barrel (\mbox{$|\eta| < 1.0$}) and an extended-barrel part (\mbox{$0.8 < |\eta| < 1.7$}).
-
-The HEC is a traditional LAr sampling calorimeter covering the region (\mbox{$1.5 < |\eta| < 3.2$}), which is placed behind the EMEC in the same
-cryostat.
-It consists of two independent wheels, each of which is divided longitudinally into two parts.
+The Tile calorimeter is located behind the EMB and the EMEC and is
+divided into three longitudinal layers. It consists of a central
+barrel (\mbox{$|\eta| < 1.0$}) and an extended-barrel part (\mbox{$0.8
+  < |\eta| < 1.7$}). 
+The HEC covers the region (\mbox{$1.5 < |\eta| < 3.2$}), which is
+placed behind the EMEC in the same cryostat. It consists of two
+independent wheels, each of which is divided longitudinally into two
+parts. 
 
 Altogether, the calorimeters cover the range \mbox{$|\eta| < 4.9$},
 thus providing enough hermeticity to ensure a precise measurement
@@ -456,11 +518,11 @@ L1 trigger has identified interesting features.
 The Level 2 (L2) trigger is software based. At this level the full detector
 granularity is used for the trigger decision but only within the RoIs
 identified at L1. Thus the throughput is reduced to
-$\approx{}2\mathrm{kHz}$ within the allowed latency of $\approx{}40\ms{}$.
+$\approx{}2~\mathrm{kHz}$ within the allowed latency of $\approx{}40\ms{}$.
 
 The final trigger level is the Event Filter (EF). At this stage the RoIs
 information is treated using the same algorithms as the off-line
-reconstruction. The EF reduces the output rate to $\approx{}200\mathrm{Hz}$, 
+reconstruction. The EF reduces the output rate to $\approx{}200~\mathrm{Hz}$, 
 with a latency of $\approx{}4\sec{}$. Once accepted by an EF trigger, an
 event is written to mass storage.
 The combination of the two software steps L2 and EF is referred to 
@@ -497,10 +559,10 @@ multiplicity of the type; the object candidate; the threshold applied to
 the transverse momentum or energy of the object candidate; the object isolation;
 additional requirements related to the type of algorithm used.
 
-In order to keep the rate within the available bandwidth ($\approx{}200~Hz$), 
-prescales are applied to the triggers with loose requirements so that
-only a fraction of the events passing the selection are actually recorded.
-
+In order to keep the rate within the available bandwidth
+($\approx{}200~\mathrm{Hz}$),  prescales are applied to the triggers
+with loose requirements so that only a fraction of the events passing
+the selection are actually recorded.
 Prescales are dynamically adjusted as the instantaneous luminosity
 decreases at each collision. Data taking time units are defined as
 {\it Luminosity Blocks} (LB), corresponding to few minutes of  data
@@ -511,7 +573,7 @@ in {\it Data Periods}, labelled with capital letters (Period A, Period B, {\it e
 which correspond to the same general detector conditions, machine configuration and
 trigger menu.
 
-\section{Data Quality}
+\section{Data quality requirements}
 \label{sec:daq}
 
 Not all collision events recorded by ATLAS are used for data analysis.
@@ -522,5 +584,6 @@ requirements are considered for the analysis. Therefore, for each dataset
 sub--detectors satisfied the requirements.
 For the measurements presented in this dissertation, all ATLAS subsystems
 are needed as the physics objects used in the analyses are reconstructed
-using the information from the full detector. 
+using the information from the full detector. The typical data quality
+efficiency is well above 90\%.
 
